--- a/front-end/src/pages/log_in_page/LogInPage.module.scss
+++ b/front-end/src/pages/log_in_page/LogInPage.module.scss
@@ -86,6 +86,9 @@
 
     &__inputBar{
         margin-top: 10px;
+        display: flex;
+        align-items: center;
+        position: relative;
     }
 
     &__buttonBar{
@@ -99,6 +102,11 @@
         width: 70%;
         display: flex;
         justify-content: center;
+    }
+
+    &__VisibleBar{
+        position: absolute;
+        left: 102%
     }
 }
 
