--- a/front-end/src/pages/sing_up_business_page/SignUpBusinessPage.module.scss
+++ b/front-end/src/pages/sing_up_business_page/SignUpBusinessPage.module.scss
@@ -58,6 +58,8 @@
         margin-top: 20px;
         display: flex;
         justify-content: center;
+        position: relative;
+        align-items: center;
     }
 
     &__buttonBar{
@@ -65,6 +67,11 @@
         display: flex;
         justify-content: center;
         width: 60%;
+    }
+
+    &__VisibleBar{
+        position: absolute;
+        left: 93%
     }
 }
 
