--- a/front-end/src/pages/sing_up_page/SignUpPage.module.scss
+++ b/front-end/src/pages/sing_up_page/SignUpPage.module.scss
@@ -86,6 +86,9 @@
 
     &__inputBar{
         margin-top: 10px;
+        display: flex;
+        align-items: center;
+        position: relative;
     }
 
     &__buttonBar{
@@ -98,7 +101,12 @@
     &__buttonFlexBar{
         width: 70%;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+    }
+
+    &__VisibleBar{
+        position: absolute;
+        left: 102%
     }
 }
 
