--- a/front-end/src/pages/company_page/CompanyPage.module.scss
+++ b/front-end/src/pages/company_page/CompanyPage.module.scss
@@ -21,6 +21,7 @@
     width: 1200px;
     animation: start 500ms ease-in-out 0s 1;
     display: flex;
+    margin-top: 40px;
 
     &__rightCol{
         width: 850px;
@@ -32,15 +33,14 @@
 }
 
 .companyData{
-    height: 220px;
+    height: 210px;
     width: 100%;
     display: flex;
 
     &__imgBar{
-        width: 250px;
+        width: 240px;
         display: flex;
         justify-content: left;
-        align-items: center;
     }
 
     &__textBar{
@@ -48,13 +48,7 @@
         color: rgb(23, 26, 31);
 
         h1{
-            margin-top: 20px;
             font-size: 40px;
-        }
-        h2{
-            margin-top: 20px;
-            font-size: 36px;
-            font-weight: 500;
         }
         h3{
             margin-top: 20px;
@@ -64,10 +58,100 @@
         }
     }
 
+    &__rating{
+        margin-top: 15px;
+        display: flex;
+        align-items: center;
+
+        h2{
+            font-size: 36px;
+            font-weight: 500;
+            margin-left: 10px;
+        }
+    }
+
     &__img{
         height: 180px;
         width: 180px;
         background-color: rgb(174, 174, 174);
         border-radius: 24px;
+    }
+}
+
+.companyAbout{
+    width: 100%;
+    h1{
+        color: rgb(23, 26, 31);
+        font-size: 36px;
+    }
+    p{
+        margin-top: 15px;
+        color: rgb(23, 26, 31);
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 30px;
+    }
+}
+
+.review{
+    height: 110px;
+    display: flex;
+    align-items: center;
+}
+
+.linkBar{
+    display: flex;
+    justify-content: center;
+}
+
+.link{
+    display: inline-block;
+    height: 60px;
+    width: 90%;
+    border: 2px solid rgb(99, 106, 232);
+    border-radius: 12px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: rgb(99, 106, 232);
+    text-decoration: none;
+    font-weight: 500;
+
+    &:hover{
+        background-color: #484dae33;
+        transition: all 250ms ease-in-out;
+    }
+}
+
+.contactBar{
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact{
+    width: 90%;
+
+    padding: 20px;
+
+    border: 2px solid rgb(222, 225, 230);
+    border-radius: 12px;
+
+    h1{
+        color: rgb(50, 55, 67);
+    }
+
+    &__dataBar{
+        display: flex;
+        align-items: center;
+        margin: 20px 0;
+
+        h3{
+            color: rgb(189, 193, 202);
+            font-weight: 500;
+            margin-left: 10px;
+        }
     }
 }
