--- a/front-end/src/pages/main_page/MainPage.module.scss
+++ b/front-end/src/pages/main_page/MainPage.module.scss
@@ -1,3 +1,12 @@
+@keyframes start{
+    0%{
+        opacity: 0%;
+    }100%{
+        opacity: 100%;
+    }
+}
+
+
 .conteiner{
     width: 100%;
     display: flex;
@@ -10,7 +19,37 @@
 }
 
 .main{
+    animation: start 500ms ease-in-out 0s 1;
     width: 1200px;
-    background-color: aqua;
     margin-top: 40px;
+
+    &__listCatBar{
+        h1{
+            font-size: 28px;
+        }
+    }
+
+    &__listCategories{
+        display: flex;
+        margin-top: 25px;
+    }
+}
+
+.button{
+    height: 55px;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 0 25px;
+    margin-right: 20px;
+
+    border: 2px solid rgb(222, 225, 230);
+    border-radius: 12px;
+
+    color: rgb(23, 26, 31);
+    font-size: 14px;
+    font-weight: 500;
+
+    &:hover{
+        background-color: rgba(0, 0, 0, 0.052);
+        transition: all 250ms;
+    }
 }
