--- a/front-end/src/components/user_review_list/UserReviewList.module.scss
+++ b/front-end/src/components/user_review_list/UserReviewList.module.scss
@@ -78,6 +78,7 @@
         }
 
         h3{
+            white-space: pre-line;
             margin-top: 10px;
             font-size: 20px;
             font-weight: 400;
