--- a/front-end/src/pages/category_page/CategoryPage.module.scss
+++ b/front-end/src/pages/category_page/CategoryPage.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
 }
 
 .header{
@@ -20,7 +21,8 @@
 .main{
     width: 1200px;
     animation: start 500ms ease-in-out 0s 1;
-    margin-top: 40px;
+    margin: 40px 0;
+    flex: 1;
 
     &__header{
         width: 100%;
