--- a/front-end/src/pages/company_page/CompanyPage.module.scss
+++ b/front-end/src/pages/company_page/CompanyPage.module.scss
@@ -21,7 +21,7 @@
     width: 1200px;
     animation: start 500ms ease-in-out 0s 1;
     display: flex;
-    margin-top: 40px;
+    margin: 40px 0;
 
     &__rightCol{
         width: 850px;
@@ -154,4 +154,10 @@
             margin-left: 10px;
         }
     }
+}
+
+.footer{
+    width: 100%;
+    height: 250px;
+    background-color: rgb(40, 40, 30);
 }
