Оновлення головної сторiнки та  виправлення вiзуальних багiв

--- a/front-end/src/App.module.scss
+++ b/front-end/src/App.module.scss
@@ -1,4 +1,10 @@
 .App{
     display: flex;
     position: relative;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    scrollbar-width: none;
 }
