--- a/front-end/src/components/header/Header.module.scss
+++ b/front-end/src/components/header/Header.module.scss
@@ -35,6 +35,47 @@
     animation: start 250ms ease-in-out 0s 1;
 }
 
+.search{
+    width: 550px;
+    padding: 10px;
+    z-index: 5;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    position: absolute;
+
+    left: calc(50% - (550px / 2));
+    top: 320px;
+
+    border-radius: 16px;
+    border: 2px solid #bdc1ca;
+
+    background-color: rgb(255, 255, 255);
+
+    &__item{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        border-radius: 12px;
+
+        h1{
+            margin-left: 12px;
+        }
+
+        &:hover{
+            background-color: #ebedf3;
+        }
+    }
+
+    &__itemData{
+        display: flex;
+        align-items: center;
+    }
+}
+
 .menu{
     display: flex;
     justify-content: space-between;
@@ -81,6 +122,7 @@
 
     &__input{
         margin-top: 40px;
+        position: relative;
     }
 }
 
