виправлення вiзуальних багiв

--- a/front-end/src/pages/sing_up_business_page/SignUpBusinessPage.module.scss
+++ b/front-end/src/pages/sing_up_business_page/SignUpBusinessPage.module.scss
@@ -11,6 +11,12 @@
     align-items: center;
 }
 
+.crossBar{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
 .form{
     width: 700px;
     height: 600px;
