--- a/front-end/src/pages/main_page/MainPage.module.scss
+++ b/front-end/src/pages/main_page/MainPage.module.scss
@@ -72,6 +72,7 @@
     }
 
     &__item{
+        width: 32%;
         background-color: rgb(243, 244, 246);
         padding: 20px;
         border-radius: 20px;
@@ -101,6 +102,7 @@
         margin-top: 40px;
 
         h2{
+            font-size: 20px;
             margin-left: 10px;
             font-weight: 500;
         }
