--- a/front-end/src/pages/review_check_page/ReviewCheckPage.module.scss
+++ b/front-end/src/pages/review_check_page/ReviewCheckPage.module.scss
@@ -1,5 +1,34 @@
-.list{
-    margin-top: 20px;
+@keyframes start{
+    0%{
+        opacity: 0%;
+    }100%{
+        opacity: 100%;
+    }
+}
+
+.conteiner{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.header{
+    width: 100%;
+}
+
+.main{
+    animation: start 500ms ease-in-out 0s 1;
+    width: 1200px;
+    margin: 40px 0;
+    flex: 1;
+}
+
+.footer{
+    width: 100%;
+    height: 250px;
+    background-color: rgb(40, 40, 30);
 }
 
 .item{
@@ -10,31 +39,6 @@
 
     border: 2px solid rgb(222, 225, 230);
     border-radius: 16px;
-    
-    &__company{
-        display: flex;
-        margin-bottom: 10px;
-        justify-content: space-between;
-
-        div{
-            display: flex;
-        }
-    }
-
-    &__companyData{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin-left: 10px;
-
-        h3{
-            font-size: 24px;
-        }
-
-        p{
-            font-size: 14px;
-        }
-    }
 
     &__userData{
         display: flex;
@@ -121,23 +125,10 @@
         align-items: end;
     }
 
-    &__replyBody{
-        margin: 10px 0 20px 0;
-        width: 90%;
-
-        h3{
-            white-space: pre-line;
-            margin-top: 10px;
-            font-size: 16px;
-            font-weight: 400;
-            word-break: break-word;
-            line-height: 1.5;
-        }
-    }
-
     &__nav{
         margin: 10px 0;
         display: flex;
+        justify-content: space-between;
         gap: 100px;
     }
 
@@ -146,34 +137,5 @@
         justify-content: center;
         margin: 20px 0;
         border-radius: 30px;
-    }
-
-    &__buttonBar{
-        display: flex;
-        align-items: center;
-        min-width: 75px;
-        max-width: auto;
-        gap: 10px;
-
-        p{
-            font-size: 16px;
-            color: rgb(23, 26, 31);
-        }
-    }
-
-    &__replies{
-        margin: 10px 0;
-        display: flex;
-        justify-content: end;
-    }
-
-    &__edit{
-        margin-top: 20px;
-    }
-
-    &__editNav{
-        margin-top: 10px;
-        display: flex;
-        justify-content: space-between;
     }
 }
