--- a/front-end/src/components/review_list/ReviewList.module.scss
+++ b/front-end/src/components/review_list/ReviewList.module.scss
@@ -165,6 +165,8 @@
         margin: 10px 0;
         display: flex;
         justify-content: end;
+        gap: 10px;
+        align-items: center;
     }
 
     &__edit{
